force-app/main/default/objects/custom_create381__c/custom_create381__c.object-meta.xml
<CustomObject>
    <label>Custom created object381</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects381</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>