force-app/main/default/objects/custom_create381__c/fields/custom_create_381field506__c.field-meta.xml
<CustomField>
    <fullName>custom_create_381field506__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 381field506</label>
    <type>Checkbox</type>
</CustomField>